# dgjax

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml
tests/: test_import.py
