[metadata]
name = dgjax
version = 0.0.1
platform = any
url = https://github.com/pawel-czyz/dgjax/
description = Differential geometry in Jax
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages =
    dgjax
python requires = >= 3.8
install_requires =
    jaxlib
    jax
    matplotlib
    numpy   

[options.packages.find]
where=dgjax

[options.extras_require]
test =
    pytest
    pytest-cov

[pytype]
inputs =
    dgjax
    scripts
    tests
